[package]
name = "t-hotp"
version = "0.1.0"
authors = ["Luca"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.1.2"
hmac-sha1 = "0.1.3"
js-sys = { version = "0.3.61", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
wasm = ["js-sys", "wasm-bindgen"]
default = ["wasm"]

[profile.release]
lto = true
opt-level = 's'

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
